--- a/index.html
+++ b/index.html
@@ -119,16 +119,57 @@
                     <div class="row">
                         <div class="col-12 col-lg-4">
                             <img class="w-50 pb-4" src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
-                            <h1 class="pb-4">Rompi il cerchio</h1>
+                            <h2 class="pb-4">Rompi il cerchio</h2>
                             <p class="pb-2">
                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis non, quo aut dicta, voluptatem omnis fugit voluptatum obcaecati placeat, nisi officiis ipsam. Repellat deleniti aut cum temporibus molestias! Blanditiis, velit.
                             </p>
-                            <a href="#" class="btn btn-info border-white bg-transparent text-white">
+                            <a href="#" class="btn btn-info border-white bg-transparent text-white mb-5">
                                 Acquista ora
                             </a>
                         </div>
                     </div>
                 </div>
+            </section>
+            <section class="cards py-4">
+                <div class="container-fluid">
+                    <div class="row g-5">
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card">
+                                <img class="w-100" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card">
+                                <img class="w-100" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card">
+                                <img class="w-100" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card">
+                                <img class="w-100" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card">
+                                <img class="w-100" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card">
+                                <img class="w-100" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="play5 text-center py-5">
+                <h6 class="text-uppercase">play has no limits</h6>
+                <h2>Ecco la PlayStation 5</h2>
+                <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
             </section>
             
         </main>
