--- a/index.html
+++ b/index.html
@@ -166,11 +166,252 @@
                     </div>
                 </div>
             </section>
-            <section class="play5 text-center py-5">
-                <h6 class="text-uppercase">play has no limits</h6>
+            <section class="play5">
+                <div class="container-fluid text-center p-5">
+                    <h6 class="text-uppercase">play has no limits</h6>
                 <h2>Ecco la PlayStation 5</h2>
                 <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <div>
+                                <h2>Console PlayStation 5</h2>
+                                <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
+                                <a href="#" class="btn btn-info border-white text-white mb-5">
+                                Maggiori informazioni
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-8">
+                            <img class="img-fluid" src="img/playstation-5-thumb.png" alt="PlayStation5 Console">
+                        </div>
+                    </div>
+                    <div class="row justify-content-md-between justify-content-lg-around">
+                        <div class="col-4 col-md-2">
+                            <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <img class="img-fluid" src="img/joypad-thumb.png" alt="">
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <img class="img-fluid" src="img/headset-thumb.png" alt="">
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <img class="img-fluid" src="img/remote-thumb.png" alt="">
+                        </div>
+                        <div class="col-4 col-md-2">
+                            <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
             </section>
+            <section class="jumbotron">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-lg-4">
+                            <img class="w-50 pb-4" src="img/it-takes-two-logo.png" alt="Returnal Logo">
+                            <h2 class="pb-4">Rompi il cerchio</h2>
+                            <p class="pb-2">
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis non, quo aut dicta, voluptatem omnis fugit voluptatum obcaecati placeat, nisi officiis ipsam. Repellat deleniti aut cum temporibus molestias! Blanditiis, velit.
+                            </p>
+                            <a href="#" class="btn btn-info border-white bg-transparent text-white mb-5">
+                                Acquista ora
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="new-releases py-5">
+                <div class="container-fluid">
+                    <div class="row g-5">
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2">
+                            <div class="card-img">
+                                <div class="card">
+                                    <img class="w-100" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="card-info">
+                                lorem lorem
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="play4 py-4">
+                <div class="container-fluid">
+                    <h2 class="text-center">Esplora PlayStation 4</h2>
+                    <p class="text-center">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <div class="row">
+                                <div class="col-12">
+                                    <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                                </div>
+                                <div class="col-12">
+                                    <h2>
+                                        PlayStation 4
+                                    </h2>
+                                    <p>
+                                        Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.
+                                    </p>
+                                    <a href="#" class="btn btn-info border-white text-white mb-5">
+                                        Scopri di più
+                                        </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="row">
+                                <div class="col-12">
+                                    <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
+                                </div>
+                                <div class="col-12">
+                                    <h2>
+                                        PlayStation VR
+                                    </h2>
+                                    <p>
+                                        oltre 500 titoli ed esperienze di gioco. Scoprili tutti.
+                                    </p>
+                                    <a href="#" class="btn btn-info border-white text-white mb-5">
+                                        Scopri di più
+                                        </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="row">
+                                <div class="col-12">
+                                    <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                                </div>
+                                <div class="col-12">
+                                    <h2>
+                                        Accessori
+                                    </h2>
+                                    <p>
+                                        Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
+                                    </p>
+                                    <a href="#" class="btn btn-info border-white text-white mb-5">
+                                        Scopri di più
+                                        </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
             
         </main>
 
