--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     </div>
                 </div>
             </section>
-            <section class="play4 py-4">
+            <section class="play4 py-5">
                 <div class="container-fluid">
                     <h2 class="text-center">Esplora PlayStation 4</h2>
                     <p class="text-center">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
@@ -367,7 +367,7 @@
                                     </p>
                                     <a href="#" class="btn btn-info border-white text-white mb-5">
                                         Scopri di più
-                                        </a>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -411,7 +411,69 @@
                 </div>
 
             </section>
+            <section class="play-plus">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <img class="img-fluid" src="img/ps-plus-logo.png" alt="">
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, velit quidem asperiores modi officiis a.
+                            </p>
+                            <a href="#" class="btn btn-info border-white text-white mb-5">
+                                Scopri di più
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="plus-img d-none d-md-block d-lg-block">
+                                <img class="img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
+            </section>
+            <section class="play-store py-5">
+                <div class="container-fluid">
+                    <h2>
+                        Nuovi sconti sul PlayStation Store
+                    </h2>
+                    <p>
+                        Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.
+                    </p>
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="play-now">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <img class="img-fluid" src="img/ps-now-logo-two-column.png" alt="">
+                            <p>
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, velit quidem asperiores modi officiis a.
+                            </p>
+                            <a href="#" class="btn btn-info border-white text-white mb-5">
+                                Scopri di più
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="plus-img d-none d-md-block d-lg-block">
+                                <img class="img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
             
         </main>
 
