--- a/index.html
+++ b/index.html
@@ -474,7 +474,27 @@
                 </div>
 
             </section>
-            
+            <section class="social py-5">
+                <div class="container-fluid">
+                    <h3 class="text-center pb-5">
+                        Segui sui social media
+                    </h3>
+                    <div class="row justify-content-center gx-4 gy-5">
+                        <div class="col-6 col-sm-3 col-md-2">
+                            <img class="img-fluid" src="img/twitter.jpg" alt="">
+                        </div>
+                        <div class="col-6 col-sm-3 col-md-2">
+                            <img class="img-fluid" src="img/facebook.jpg" alt="">
+                        </div>
+                        <div class="col-6 col-sm-3 col-md-2">
+                            <img class="img-fluid" src="img/instagram.jpg" alt="">
+                        </div>
+                        <div class="col-6 col-sm-3 col-md-2">
+                            <img class="img-fluid" src="img/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
     
