--- a/index.html
+++ b/index.html
@@ -496,6 +496,120 @@
                 </div>
             </section>
         </main>
+        <footer class="bg-footer text-white">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-12 col-lg-6">
+                                <img class="d-block" src="img/play_logo.svg" alt="">
+                                <img class="globe" src="img/language-globe.svg" alt="">
+                                <span>Country / Region: Italy</span>
+                            </div>
+                            <div class="col-12 col-lg-6">
+                                <div class="row">
+                                    <div class="col-12 col-md-4">
+                                        <div class="link my-3">
+                                            <p>
+                                                <a class="text-decoration-none" href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <div class="link mb-3">
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <div class="link mb-3">
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                            <p>
+                                                <a href="#">
+                                                    Link Footer
+                                                </a>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <img class="sie" src="img/sie-logo.svg" alt="">
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quo, mollitia dignissimos, perspiciatis iste pariatur, molestiae temporibus sed laboriosam dolores molestias sint aperiam. Tempore, dicta quae nostrum tenetur voluptates voluptate?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
     
 
