--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <header>
             <div id="sony-bar" class="s-bar-bg d-flex justify-content-end align-items-center">
-                <a href="#"><img class="main-logo" src="img/sony_logo.svg" alt="Sony Logo"></a>
+                <a href="#"><img class="sony-logo" src="img/sony_logo.svg" alt="Sony Logo"></a>
             </div>
             <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
                 <div class="container-fluid">
@@ -131,8 +131,8 @@
                 </div>
             </section>
             <section class="cards py-4">
-                <div class="container-fluid">
-                    <div class="row g-5">
+                <div class="container-fluid g-5">
+                    <div class="row">
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="card">
                                 <img class="w-100" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
@@ -223,8 +223,8 @@
                 </div>
             </section>
             <section class="new-releases py-5">
-                <div class="container-fluid">
-                    <div class="row g-5">
+                <div class="container-fluid g-5">
+                    <div class="row">
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="card-img">
                                 <div class="card">
@@ -496,22 +496,25 @@
                 </div>
             </section>
         </main>
-        <footer class="bg-footer text-white">
+        <footer class="bg-footer text-white py-5">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
                         <div class="row">
                             <div class="col-12 col-lg-6">
-                                <img class="d-block" src="img/play_logo.svg" alt="">
-                                <img class="globe" src="img/language-globe.svg" alt="">
-                                <span>Country / Region: Italy</span>
+                                <!-- TODO spostare il logo a sx in linea con gli altri -->
+                                <img class="main-logo" src="img/play_logo.svg" alt="">
+                                <div class="country d-flex mb-5">
+                                    <img class="globe me-1" src="img/language-globe.svg" alt="">
+                                    <p>Country / Region: Italy</p>
+                                </div>
                             </div>
                             <div class="col-12 col-lg-6">
-                                <div class="row">
+                                <div class="row ps-4">
                                     <div class="col-12 col-md-4">
-                                        <div class="link my-3">
+                                        <div class="link my-3 my-md-0 pt-4 pt-md-0">
                                             <p>
-                                                <a class="text-decoration-none" href="#">
+                                                <a href="#">
                                                     Link Footer
                                                 </a>
                                             </p>
@@ -600,18 +603,16 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <img class="sie" src="img/sie-logo.svg" alt="">
+                        <img class="sie pt-4" src="img/sie-logo.svg" alt="">
                     </div>
                     <div class="col-12 col-lg-6">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quo, mollitia dignissimos, perspiciatis iste pariatur, molestiae temporibus sed laboriosam dolores molestias sint aperiam. Tempore, dicta quae nostrum tenetur voluptates voluptate?
+                        <p class="pt-3">
+                            Website <i class="fa-regular fa-copyright"></i>2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a>
                         </p>
                     </div>
                 </div>
             </div>
         </footer>
-
-    
 
         <!-- js -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
