--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="#"><img class="sony-logo" src="img/sony_logo.svg" alt="Sony Logo"></a>
             </div>
             <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
-                <div class="container-fluid">
+                <div class="container">
     
                     <a class="navbar-brand" href="#">
                         <img src="img/play_logo.svg" alt="Playstation Logo">
@@ -115,7 +115,7 @@
         
         <main>
             <section class="jumbotron">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-4">
                             <img class="w-50 pb-4" src="img/returnal-hero-banner-logo.png" alt="Returnal Logo">
@@ -131,7 +131,7 @@
                 </div>
             </section>
             <section class="cards py-4">
-                <div class="container-fluid g-5">
+                <div class="container">
                     <div class="row">
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="card">
@@ -167,12 +167,12 @@
                 </div>
             </section>
             <section class="play5">
-                <div class="container-fluid text-center p-5">
+                <div class="container text-center p-5">
                     <h6 class="text-uppercase">play has no limits</h6>
                 <h2>Ecco la PlayStation 5</h2>
                 <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
                 </div>
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <div>
@@ -207,7 +207,7 @@
                 </div>
             </section>
             <section class="jumbotron">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-4">
                             <img class="w-50 pb-4" src="img/it-takes-two-logo.png" alt="Returnal Logo">
@@ -223,7 +223,7 @@
                 </div>
             </section>
             <section class="new-releases py-5">
-                <div class="container-fluid g-5">
+                <div class="container">
                     <div class="row">
                         <div class="col-6 col-sm-4 col-lg-2">
                             <div class="card-img">
@@ -349,7 +349,7 @@
                 </div>
             </section>
             <section class="play4 py-5">
-                <div class="container-fluid">
+                <div class="container">
                     <h2 class="text-center">Esplora PlayStation 4</h2>
                     <p class="text-center">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</p>
                     <div class="row">
@@ -412,7 +412,7 @@
 
             </section>
             <section class="play-plus">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <img class="img-fluid" src="img/ps-plus-logo.png" alt="">
@@ -433,7 +433,7 @@
 
             </section>
             <section class="play-store py-5">
-                <div class="container-fluid">
+                <div class="container">
                     <h2>
                         Nuovi sconti sul PlayStation Store
                     </h2>
@@ -454,7 +454,7 @@
                 </div>
             </section>
             <section class="play-now">
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <img class="img-fluid" src="img/ps-now-logo-two-column.png" alt="">
@@ -475,7 +475,7 @@
 
             </section>
             <section class="social py-5">
-                <div class="container-fluid">
+                <div class="container">
                     <h3 class="text-center pb-5">
                         Segui sui social media
                     </h3>
@@ -497,7 +497,7 @@
             </section>
         </main>
         <footer class="bg-footer text-white py-5">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <div class="row">
