--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             </li>
                             <li class="nav-item dropdown position-static">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Fai Acquisti 
+                                    Fai acquisti 
                                 </a>
                                 <ul class="dropdown-menu w-100 text-center rounded-0 border-0 mt-0 shadow-d-down">
                                     <li class="d-inline-block">
@@ -237,12 +237,12 @@
                                 </ul>
                             </li>
                             <li class="nav-item py-3 py-lg-0">
-                                <a class="nav-link g-btn rounded-pill text-white px-4 d-inline-block" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link g-btn rounded-pill text-white px-4 d-inline-block" href="#" role="button">
                                     Accedi
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-lg-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link text-lg-center" href="#" role="button">
                                     <img class="lens" src="img/lens.svg" alt="">
                                 </a>
                             </li>
@@ -265,7 +265,7 @@
                                 <p class="mb-4">
                                     Rialzati dopo ogni sconfitta e afffronta una nuova sffida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.
                                 </p>
-                                <a href="#" class="btn border-0 rounded-pill o-btn text-white mb-5">
+                                <a href="#" role="button" class="btn border-0 rounded-pill o-btn text-white mb-5 hover-btn">
                                     Acquista ora
                                 </a>
                             </div>
@@ -322,7 +322,7 @@
                         <h2 class="display-4 pb-4">
                             Ecco la PlayStation 5
                         </h2>
-                        <h4 class="text-clr-g pb-5">
+                        <h4 class="text-clr-g pb-5 pb-md-0">
                             Tuffati in nuove possibilità di gioco completamente inaspettate
                         </h4>
                     </div>
@@ -335,7 +335,7 @@
                                 <p class="text-clr-g pb-3">
                                     Sperimenta la nuova generazione di incredibili giochi PlayStation
                                 </p>
-                                <a href="#" class="btn b-btn rounded-pill text-white mb-5">
+                                <a href="#" role="button" class="btn b-btn rounded-pill text-white mb-5 hover-btn">
                                 Maggiori informazioni
                                 </a>
                             </div>
@@ -345,19 +345,19 @@
                         </div>
                         <div class="row justify-content-md-between justify-content-lg-around">
                             <div class="col-4 col-md-2">
-                                <img class="img-fluid op-img" src="img/playstation-5-thumb.png" alt="">
+                                <img class="img-fluid p5-hover" src="img/playstation-5-thumb.png" alt="">
                             </div>
                             <div class="col-4 col-md-2">
-                                <img class="img-fluid op-img" src="img/joypad-thumb.png" alt="">
+                                <img class="img-fluid p5-hover" src="img/joypad-thumb.png" alt="">
                             </div>
                             <div class="col-4 col-md-2">
-                                <img class="img-fluid op-img" src="img/headset-thumb.png" alt="">
+                                <img class="img-fluid p5-hover" src="img/headset-thumb.png" alt="">
                             </div>
                             <div class="col-4 col-md-2">
-                                <img class="img-fluid op-img" src="img/remote-thumb.png" alt="">
+                                <img class="img-fluid p5-hover" src="img/remote-thumb.png" alt="">
                             </div>
                             <div class="col-4 col-md-2">
-                                <img class="img-fluid op-img" src="img/camera-thumb.jpg" alt="">
+                                <img class="img-fluid p5-hover" src="img/camera-thumb.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -379,7 +379,7 @@
                             <p class="pb-2">
                                 Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.
                             </p>
-                            <a href="#" class="btn border-0 rounded-pill o-btn text-white mb-5">
+                            <a href="#" role="button" class="btn border-0 rounded-pill o-btn text-white mb-5 hover-btn">
                                 Acquista ora
                             </a>
                         </div>
@@ -497,7 +497,7 @@
                                         <p class="text-clr-g">
                                             Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.
                                         </p>
-                                        <a href="#" class="btn b-btn rounded-pill text-white mb-5">
+                                        <a href="#" role="button" class="btn b-btn rounded-pill text-white mb-5 hover-btn">
                                             Scopri di più
                                         </a>
                                     </div>
@@ -515,7 +515,7 @@
                                         <p class="text-clr-g">
                                             Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.
                                         </p>
-                                        <a href="#" class="btn b-btn rounded-pill text-white mb-5">
+                                        <a href="#" role="button" class="btn b-btn rounded-pill text-white mb-5 hover-btn">
                                             Scopri di più
                                             </a>
                                     </div>
@@ -533,7 +533,7 @@
                                         <p class="text-clr-g">
                                             Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
                                         </p>
-                                        <a href="#" class="btn b-btn rounded-pill text-white mb-5">
+                                        <a href="#" role="button" class="btn b-btn rounded-pill text-white mb-5 hover-btn">
                                             Scopri di più
                                             </a>
                                     </div>
@@ -553,7 +553,7 @@
                                 <p class="pt-5 pb-4">
                                     Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.
                                 </p>
-                                <a href="#" class="btn lg-btn rounded-pill text-clr-b">
+                                <a href="#" role="button" class="btn lg-btn rounded-pill text-clr-b hover-btn">
                                     Esplora PlayStation Plus
                                 </a>
                             </div>
@@ -578,13 +578,13 @@
                         </p>
                         <div class="row gy-5">
                             <div class="col-12 col-md-4">
-                                <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                                <img class="img-fluid store-hover" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
                             </div>
                             <div class="col-12 col-md-4">
-                                <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                                <img class="img-fluid store-hover" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
                             </div>
                             <div class="col-12 col-md-4">
-                                <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                                <img class="img-fluid store-hover" src="img/playstation-store-free-to-play-spotlight.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -600,7 +600,7 @@
                                 <p class="pt-5 pb-4">
                                     Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per Ps4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
                                 </p>
-                                <a href="#" class="btn bg-white rounded-pill">
+                                <a href="#" role="button" class="btn bg-white rounded-pill hover-btn">
                                     Esplora PlayStation Now
                                 </a>
                             </div>
@@ -620,18 +620,18 @@
                         <h3 class="text-center pb-5 display-6">
                             Seguici sui social media
                         </h3>
-                        <div class="row justify-content-center gy-5">
+                        <div class="row justify-content-center gy-5 ">
                             <div class="col-6 col-sm-3 col-md-2">
-                                <img class="img-fluid" src="img/twitter.jpg" alt="">
+                                <img class="w-100" src="img/twitter.jpg" alt="">
                             </div>
                             <div class="col-6 col-sm-3 col-md-2">
-                                <img class="img-fluid" src="img/facebook.jpg" alt="">
+                                <img class="w-100" src="img/facebook.jpg" alt="">
                             </div>
                             <div class="col-6 col-sm-3 col-md-2">
-                                <img class="img-fluid" src="img/instagram.jpg" alt="">
+                                <img class="w-100" src="img/instagram.jpg" alt="">
                             </div>
                             <div class="col-6 col-sm-3 col-md-2">
-                                <img class="img-fluid" src="img/youtube.png" alt="">
+                                <img class="w-100" src="img/youtube.png" alt="">
                             </div>
                         </div>
                     </div>
