Add fixed header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
+        <header class="position-fixed w-100">
             <div id="sony-bar" class="s-bar-bg d-flex justify-content-end">
                 <a href="#"><img class="sony-logo py-3 pe-2" src="img/sony_logo.svg" alt="Sony Logo"></a>
             </div>
